version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/ShellSecBlockCommand.rst.txt
.. vale off



:class:`ShellSecBlockCommand`
=============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.ShellSecBlockCommand(iShellSecBlockCommand: Ansys.Common.Interop.FEParsePlugin_ANSYS.IShellSecBlockCommand)

   Bases: :py:obj:`object`


   
   Represents a shell SECBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ShellSecBlockCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Layers`
            - Gets the layers.
          * - :py:attr:`~Name`
            - Gets the command name.
          * - :py:attr:`~Type`
            - Get the section type.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Layers
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandLayer]]


   
   Gets the layers.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Type
   :type: Optional[str]


   
   Get the section type.
















   ..
       !! processed by numpydoc !!







.. vale on